# dokku-daemon-rs

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: binary.yml  ci.yml
conf/: dokku-daemon.service
src/: lib.rs  main.rs
tests/: test_commands.rs
