[package]
name = "dokku-daemon-rs"
version = "0.1.0"
edition = "2024"
license = "AGPLv3"

[dependencies]
anyhow = {version="1.0.100", default-features = false }
env_logger = {version="0.11.8",default-features = false }
log = {version="0.4.29",default-features = false }
serde = {version="1.0.228", features = ["derive"]}
serde_json = {version="1.0.145",default-features = false, features = ["alloc"]}
tokio = {version="1", features = ["macros", "rt-multi-thread", "net", "sync"]}

# Settings here are because we care more about size than speed
# Based on https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = 'abort'