[package]
name = "dokku-daemon-rs"
version = "0.1.0"
edition = "2024"
license = "AGPLv3"

[dependencies]
anyhow = {version="1.0.100", default-features = false }
clap = {version="4.5.53", default-features = false, features=["help", "std", "cargo", "usage"]}
env_logger = {version="0.11.8",default-features = false }
log = {version="0.4.29",default-features = false }
serde = {version="1.0.228", features = ["derive"]}
serde_json = {version="1.0.145",default-features = false, features = ["alloc"]}
tokio = {version="1", features = ["macros", "rt-multi-thread", "net", "sync"], default-features = false}

[dev-dependencies]
serial_test = {version="3.2.0", features=["async"],default-features = false}
tokio = {version="1", features = ["time"],default-features = false}

# Settings here are because we care more about size than speed
# Based on https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = 'abort'
